src/test/ui/regions/regions-assoc-type-in-supertrait-outlives-container.mir.stderr
error: lifetime may not live long enough
  --> $DIR/regions-assoc-type-in-supertrait-outlives-container.rs:45:13
   |
LL | fn with_assoc<'a,'b>() {
   |               -- -- lifetime `'b` defined here
   |               |
   |               lifetime `'a` defined here
...
LL |     let _x: &'a WithAssoc<TheType<'b>> = loop { };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'b` must outlive `'a`

error: aborting due to previous error

